deploy/k8s/etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.0
          command: ["etcd", "--advertise-client-urls", "http://etcd:2379", "--listen-client-urls", "http://0.0.0.0:2379"]
          ports:
            - containerPort: 2379
#          resources:
          # Define resource limits and requests if needed
          # limits:
          #   cpu: "1"
          #   memory: "512Mi"
          # requests:
          #   cpu: "500m"
          #   memory: "256Mi"
