deploy/k8s/rpc-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpc-server
  template:
    metadata:
      labels:
        app: rpc-server
    spec:
      containers:
        - name: rpc-server
          image: pbthang/go_messaging_app-rpc-server:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 8888
            initialDelaySeconds: 10
            periodSeconds: 10
