deploy/k8s/rpc-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpc-server
spec:
  selector:
    app: rpc-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
